8233451: (fs) Files.newInputStream() cannot be used with character special files