src/java.base/windows/native/libjava/io_util_md.c
@@ -290,7 +290,7 @@ handleNonSeekAvailable(FD, long *);
 static int
 handleStdinAvailable(FD, long *);
 
-int
+JNIEXPORT int
 handleAvailable(FD fd, jlong *pbytes) {
     HANDLE h = (HANDLE)fd;
     DWORD type = 0;
